added angular material styles

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button mat-button color="primary" (click)="setGridParameters()" style="margin-bottom:20px">Test Grid</button>
+<button mat-button color="dark-primary" (click)="setGridParameters()" style="margin-bottom:20px">Test Grid</button>
 <lcu-data-grid [Config]="GridParameters"></lcu-data-grid>
 
 <router-outlet></router-outlet>
