show grid column headers before data arrives

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,4 +1,5 @@
-<button mat-button color="dark-primary" (click)="setGridParameters()" style="margin-bottom:20px">Test Grid</button>
+
+<button mat-raised-button color="primary" (click)="GridData()" style="margin-bottom:20px">Get Grid Data</button>
 <lcu-data-grid [Config]="GridParameters"></lcu-data-grid>
 
 <router-outlet></router-outlet>
