--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -1,11 +1,11 @@
 
 <div fxLayoutAlign=" start">
   <mat-form-field *ngIf="Config?.Features?.Filter" class="filter-field">
-    <input matInput type="text" (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    <input matInput type="text" (keyup)="ApplyFilter($event.target.value)" placeholder="Filter">
   </mat-form-field>
 </div>
 <mat-progress-bar mode="indeterminate" *ngIf="ShowLoader"></mat-progress-bar>
-<mat-table [dataSource]="dataSource" matSort *ngIf="Config" (matSortChange)="sorting($event)">
+<mat-table [dataSource]="dataSource" matSort *ngIf="Config" (matSortChange)="Sorting($event)">
   <ng-container *ngFor="let column of Config.ColumnDefs" matColumnDef="{{ column.ColType }}">
     <mat-header-cell *matHeaderCellDef mat-sort-header [disabled]="!column.Sortable" fxLayoutAlign="center center">
 
@@ -13,9 +13,9 @@
         Show select checkbox in the header
       -->
       <mat-checkbox *ngIf="ToggleSelection(Config, column)"
-                    (change)="$event ? masterToggle() : null"
-                    [checked]="selection.hasValue() && isAllSelected()"
-                    [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    (change)="$event ? MasterToggle() : null"
+                    [checked]="selection.hasValue() && IsAllSelected()"
+                    [indeterminate]="selection.hasValue() && !IsAllSelected()">
       </mat-checkbox>
 
       <!--
