--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -45,12 +45,12 @@
         <!--When adding a button to the table cell-->
         <div *ngIf="column.Action">
           <button *ngIf="column.Action.ActionType === 'button'"  
-          mat-button (click)="column.ActionHandler(column.ActionParams)">
+          mat-button (click)="column.Action.ActionHandler(column.ActionParams)">
             <mat-icon>{{column.SetIcon(item)}}</mat-icon>
           </button>
 
           <a *ngIf="column.Action.ActionType === 'href'"  
-            style="text-decoration:none;" href="{{ column.ActionHandler(column.ActionParams) }}" target="_blank">
+            style="text-decoration:none;" href="{{ column.Action.ActionHandler(column.ActionParams) }}" target="_blank">
             <mat-icon>{{column.SetIcon(item)}}</mat-icon>
           </a>
         </div>
