--- a/projects/common/src/lib/controls/data-grid/data-grid.component.scss
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.scss
@@ -13,5 +13,5 @@
 font-size: 27px;
 margin-right: 5px;
 }
-.gray { background-color: #ececec }
-.light-gray { background-color: #f5f5f5 }
+.gray { background-color: #ececec; color: #272727 }
+.light-gray { background-color: #f5f5f5; color: #333333 }
