variable names for row colors

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -67,7 +67,7 @@
                        let odd = odd;
                        let even = even;
                        columns: displayedColumns;"
-                       [ngClass]= "{ 'Config?.Features?.RowColorEven': even, 'Config?.Features?.RowColorOdd': odd }"
+                       [ngClass]= "{ RowColorEven: even, RowColorOdd: odd }"
                        (click)="selection.toggle(row)"></mat-row>
 
 </mat-table>
