ngClass to ngStyle

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -68,6 +68,7 @@
                        let even = even;
                        columns: displayedColumns;"
                        [ngClass]= "RowColors(even, odd)"
+                       [ngStyle]="{'background-color': RowColors(even, odd)}"
                        (click)="selection.toggle(row)"></mat-row>
 
 </mat-table>
