--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -56,7 +56,7 @@
 
         <!--Toggle data value on and off and set pipes, if available-->
         <!--column.pipe value comes from columnDefinition-->
-        <span *ngIf="column.ShowValue">{{ item[column.ColType] | dataGridPipes: column.Pipe }}</span>
+        <span *ngIf="column.ShowValue">{{ item[column.ColType] | dataPipes: column.Pipe }}</span>
       </span>
 
     </mat-cell>
