--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,6 +1,13 @@
 
-<button mat-raised-button color="primary" (click)="GridData()" style="margin-bottom:20px">Get Grid Data</button>
-<lcu-data-grid [Config]="GridParameters"></lcu-data-grid>
-
+<div fxLayout="row" fxLayoutGap="10px">
+    <button mat-raised-button color="primary" (click)="GridData()" style="margin-bottom:20px">Get Grid Data</button>
+    <button mat-raised-button color="primary" (click)="ExpandableGridData()" style="margin-bottom:20px">Get Expanded Data</button>    
+</div>
+<div fxLayout="column" fxLayoutGap="10px">
+    <lcu-data-grid 
+        [Config]="GridParameters">
+    </lcu-data-grid>
+    <lcu-expand-data-grid></lcu-expand-data-grid>
+</div>
 <router-outlet></router-outlet>
 
