--- a/projects/common/src/lib/controls/data-grid/data-grid.component.scss
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.scss
@@ -17,68 +17,15 @@ margin-right: 5px;
 .gray { background-color: #ececec }
 .light-gray { background-color: #f5f5f5 }
 
-
-/**
-* For Testing - shannon
-**/
-
-
-.student-element-detail {
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #e1e1e1;
-  box-shadow: inset 2px 3px 8px #c1c1c1;
-  border-radius: 8px;
-}
-
-.mat-cell {
-  background-color: #ff11ff;
-}
-
-
-.student-detail-row mat-cell {
-  // height: 0;
-  // background-color:rgb(178, 134, 221);
-  border-bottom-width: 0;
-}
-
-.test {
+.details-row {
   height: 0;
 }
 
-.student-element-row:not(.student-expanded-row):hover {
-  background: whitesmoke;
-}
-
-.student-element-row:not(.student-expanded-row):active {
-  background: #efefef;
-}
-
-.student-element-row {
+.details-element-row td {
   border-bottom-width: 0;
 }
 
-.student-element-diagram {
-  min-width: 80px;
-  border: 2px solid black;
-  padding: 8px;
-  font-weight: lighter;
-  margin: 8px 0;
-  height: 104px;
-}
-
-.student-element-symbol {
-  font-weight: bold;
-  font-size: 40px;
-  line-height: normal;
-}
-
-.student-element-description {
-  padding: 16px;
-}
-
-.student-element-description-attribution {
-  opacity: 0.5;
+.details-con {
+  overflow: hidden;
+  background-color: #ececec;
 }
