--- a/projects/common/src/lib/controls/expand-data-grid/expand-data-grid.component.html
+++ b/projects/common/src/lib/controls/expand-data-grid/expand-data-grid.component.html
@@ -1,15 +1,9 @@
+<div style="max-width:1024px;padding:20px;margin: 50px auto;">
 
-<!-- Master Toggle Button -->
-<div fxLayout="row" fxLayoutAlign="end center">
-    <a mat-raised-button 
-        href="javascript:void(0)" 
-        (click)="toggleTableRows()" 
-        color="primary">
-        Toggle Rows
-    </a>
-</div>
-<div>
-
+    <!-- Master Toggle Button -->
+    <div style="text-align: end;padding: 10px 104px;">
+      <a mat-raised-button href="javascript:void(0)" (click)="toggleTableRows()" color="primary">Toggle Rows</a>
+    </div>
   
     <table mat-table [dataSource]="dataStudentsList" multiTemplateDataRows>
   
@@ -46,7 +40,7 @@
   
   
       <!-- Template for details row -->
-      <ng-container matColumnDef="expandedDetail" id="tester">
+      <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element" [attr.colspan]="displayedStudentsColumnsList.length">
   
           <div class="row student-element-detail" [@detailExpand]="element.isExpanded ? 'expanded' : 'collapsed'">
@@ -60,22 +54,15 @@
           </div>
   
         </td>
-        
       </ng-container>
   
   
       <tr mat-header-row *matHeaderRowDef="displayedStudentsColumnsList;sticky: true"></tr>
-      <tr mat-row *matRowDef="let element; columns: displayedStudentsColumnsList;" 
-        class="student-element-row" [class.student-expanded-rowd]="element.isExpanded">
-        
-      </tr>
+      <tr mat-row *matRowDef="let element; columns: displayedStudentsColumnsList;" class="student-element-row"
+        [class.student-expanded-row]="element.isExpanded"></tr>
   
       <!-- Extra row to show detail content column -->
-      <tr 
-          mat-row 
-          *matRowDef="let row; columns: ['expandedDetail']" 
-          class="student-detail-row">
-      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="student-detail-row"></tr>
   
     </table>
   
