--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -84,7 +84,7 @@
           fxLayoutAlign="center"
           class="details-con" 
           [@detailExpand]="element.isExpanded ? 'expanded' : 'collapsed'">
-            <div #dynamicComponent></div>
+            <div #dynaComponent></div>
           <mat-list>
             <div mat-subheader>Subjects of {{element.name}}</div>
             <mat-list-item *ngFor="let subject of element.subjects">
