AB#8917 successful dynamic component insert

--- a/projects/demo/src/app/components/json-display/json-display.component.html
+++ b/projects/demo/src/app/components/json-display/json-display.component.html
@@ -1,1 +1,9 @@
-<p>json-display works!</p>
+<div fxFlex>
+    <div 
+        fxLayout="column" 
+        fxLayoutGap="10px" 
+        style="background-color: coral;">
+        <div style="background-color: cornflowerblue; height: 100px; width:100px">Test</div>
+        <div style="background-color: purple ; height: 100px; width:100%">ing</div>
+    </div>
+</div>
