--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -90,7 +90,8 @@
           
           <!-- <div #dynaComponent>dssdds</div> -->
           <!-- <lcu-dynamic-test></lcu-dynamic-test> -->
-          <lcu-dynamic-container>sdf</lcu-dynamic-container>
+          
+          <lcu-dynamic-container></lcu-dynamic-container>
           <mat-list>
             <div mat-subheader>Subjects of {{element.name}}</div>
             <mat-list-item *ngFor="let subject of element.subjects">
