--- a/projects/demo/src/app/components/json-display/json-display.component.html
+++ b/projects/demo/src/app/components/json-display/json-display.component.html
@@ -6,4 +6,5 @@
         <div style="background-color: cornflowerblue; height: 100px; width:100px">Test</div>
         <div style="background-color: purple ; height: 100px; width:100%">ing</div>
     </div>
+    <!-- <div mat-line>THIS IS THE VALUE, BRO {{ subject?.name }}</div> -->
 </div>
