--- a/projects/common/src/lib/controls/dynamic-component/dynamic.component.html
+++ b/projects/common/src/lib/controls/dynamic-component/dynamic.component.html
@@ -1,6 +1,6 @@
 <!--Container for displaying dynamically loaded components-->
-<div #DynamicDisplayContainer>
+<ng-template #DynamicDisplayContainer>
     <span class="margin-5" *ngIf="ComponentError">
         Component not found!
     </span>
-</div>
+</ng-template>
