--- a/projects/demo/src/app/components/json-display/json-display.component.html
+++ b/projects/demo/src/app/components/json-display/json-display.component.html
@@ -1,10 +1,9 @@
 <div fxFlex>
-    <div 
-        fxLayout="column" 
-        fxLayoutGap="10px" 
-        style="background-color: coral;">
-        <div style="background-color: cornflowerblue; height: 100px; width:100px">Test</div>
-        <div style="background-color: purple ; height: 100px; width:100%">ing</div>
-    </div>
-    <!-- <div mat-line>THIS IS THE VALUE, BRO {{ subject?.name }}</div> -->
+    <mat-list>
+        <div mat-subheader>Subjects of {{ DataSource.name }}</div>
+        <mat-list-item *ngFor="let subject of DataSource.subjects">
+          <div mat-line>{{ subject.name }}</div>
+          <div mat-line> {{ subject.type }} | Grade: {{ subject.grade }}</div>
+        </mat-list-item>
+      </mat-list>
 </div>
