AB#8917 Style cleanup and check for datasource in dynamic component

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -87,7 +87,7 @@
 
         <div
           fxLayoutAlign="center"
-          class="details-con" 
+          class="details-con background-fill" 
           [@detailExpand]="element.isExpanded ? 'expanded' : 'collapsed'">
           <lcu-dynamic-container [datasource]="element"></lcu-dynamic-container>
         </div>
