--- a/projects/common/src/lib/controls/expand-data-grid/expand-data-grid.component.html
+++ b/projects/common/src/lib/controls/expand-data-grid/expand-data-grid.component.html
@@ -33,7 +33,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element">
-          <a mat-button href="javascript:void()" (click)="element.isExpanded = !element.isExpanded">View
+          <a mat-button href="javascript:void()" (click)="element.$IsExpanded = !element.$IsExpanded">View
             Subjects</a>
         </td>
       </ng-container>
@@ -43,7 +43,7 @@
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element" [attr.colspan]="displayedStudentsColumnsList.length">
   
-          <div class="row student-element-detail" [@detailExpand]="element.isExpanded ? 'expanded' : 'collapsed'">
+          <div class="row student-element-detail" [@detailExpand]="element.$IsExpanded ? 'expanded' : 'collapsed'">
             <mat-list>
               <div mat-subheader>Subjects of {{element.name}}</div>
               <mat-list-item *ngFor="let subject of element.subjects">
@@ -59,7 +59,7 @@
   
       <tr mat-header-row *matHeaderRowDef="displayedStudentsColumnsList;sticky: true"></tr>
       <tr mat-row *matRowDef="let element; columns: displayedStudentsColumnsList;" class="student-element-row"
-        [class.student-expanded-row]="element.isExpanded"></tr>
+        [class.student-expanded-row]="element.$IsExpanded"></tr>
   
       <!-- Extra row to show detail content column -->
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="student-detail-row"></tr>
