ab#8956 page event output

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -124,6 +124,7 @@
     *ngIf="Config?.Features?.Paginator"
     [pageSize]="Config?.Features?.Paginator.PageSize"
     [pageSizeOptions]="Config?.Features?.Paginator.PageSizeOptions"
+    (page)="HandlePageChange($event)"
     showFirstLastButtons>
   </mat-paginator>
 </div>
