AB#8917 little refactoring

--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -93,7 +93,7 @@
           fxLayoutAlign="center"
           class="details-con background-fill" 
           [@detailExpand]="element.$IsExpanded ? 'expanded' : 'collapsed'">
-          <lcu-dynamic-container [datasource]="element"></lcu-dynamic-container>
+          <lcu-dynamic-container [data-source]="element"></lcu-dynamic-container>
         </div>
       </td>
     </ng-container>
