--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,4 +1,7 @@
 
+<div class="maring-5">
+    <span >{{utctest | dataPipes: test}}</span>
+  </div>
 <div fxLayout="row" fxLayoutGap="10px">
     <button mat-raised-button color="primary" (click)="GridData()" style="margin-bottom:20px">Get Grid Data</button>    
 </div>
