--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,10 +1,15 @@
 
 <div fxLayout="row" fxLayoutGap="10px">
-    <button mat-raised-button color="primary" (click)="GridData()" style="margin-bottom:20px">Get Grid Data</button>    
+    <button 
+        mat-raised-button color="primary" 
+        (click)="GridData()" 
+        style="margin-bottom:20px">
+        Get Grid Data
+    </button>    
 </div>
 <div fxLayout="column" fxLayoutGap="10px">
     <lcu-data-grid 
-        expand
+        expandd
         [config]="GridParameters"
         [dynamic-components]="DynamicComponents">
     </lcu-data-grid>
