--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -9,7 +9,7 @@
 </div>
 <div fxLayout="column" fxLayoutGap="10px">
     <lcu-data-grid 
-        expandd
+        expand
         [config]="GridParameters"
         [dynamic-components]="DynamicComponents">
     </lcu-data-grid>
