--- a/projects/common/src/lib/controls/data-grid/data-grid.component.html
+++ b/projects/common/src/lib/controls/data-grid/data-grid.component.html
@@ -39,7 +39,7 @@
 
       <td mat-cell *matCellDef="let item" 
           [ngStyle]="{'width': column.ColWidth ? column.ColWidth : null,
-                  'background-color' : column.ColBGColor ? column.ColBGColor : null}">
+                      'background-color' : column.ColBGColor ? column.ColBGColor : null}">
         <mat-checkbox *ngIf="ToggleSelection(Config, column)"
                       (click)="$event.stopPropagation()"
                       (change)="$event ? selection.toggle(item) : null"
@@ -53,7 +53,9 @@
             *ngIf="column.ShowIcon" 
             class="dg-icons" 
             [ngStyle]="{'color': column.IconColor}"
-            [ngClass]="column.SetIcon(item)"></i>
+            [ngClass]="column.SetIcon(item)"
+            [ngClass]="column.IconColor">
+          </i>
 
             <!--When adding a button to the table cell-->
             <button 
@@ -62,7 +64,10 @@
               [matTooltip]="column.Action.ActionTooltip ? column.Action.ActionTooltip : ''"
               class="cursor-pointer"
               (click)="column.Action.ActionHandler(item)">
-              <mat-icon [ngStyle]="{'color': column.IconColor}">{{ column.SetIcon(item) }}</mat-icon>
+              <mat-icon 
+                [ngStyle]="{'color': column.IconColor}"
+                [ngClass]="column.IconColor">
+                {{ column.SetIcon(item) }}</mat-icon>
               <span 
                 *ngIf="column.Action.ActionLabel">
                 {{ column.Action.ActionLabel }}
@@ -75,7 +80,11 @@
                href="{{ column.Action.ActionHandler(item) }}" 
                target="_blank"
                [matTooltip]="column.Action.ActionTooltip ? column.Action.ActionTooltip : ''">
-              <mat-icon [ngStyle]="{'color': column.IconColor}">{{ column.SetIcon(item) }}</mat-icon>
+              <mat-icon 
+                [ngStyle]="{'color': column.IconColor}"
+                [ngClass]="column.IconColor">
+                {{ column.SetIcon(item) }}
+              </mat-icon>
             </a>
 
             <!--Toggle data value on and off and set pipes, if available-->
